# Eloquence

./: $null  .dockerignore  .env  .env.example  .env.production  .env.template  .gitattributes  .gitignore  .gitmodules  ANALYSE_ENDPOINTS_SCALEWAY.md  ANALYSE_ENDPOINTS_SCALEWAY_FINAL.md  ARCHITECTURE_LIVEKIT_UNIVERSELLE_ELOQUENCE.md  ARCHITECTURE_PROJET_ELOQUENCE.md  CHANGELOG.md  COMMANDES_GIT.txt  CONFIGURATION_COMPLETE_RESUME.md  CONFIGURATION_FRONTEND_BACKEND_FINAL.md  CONFIGURATION_FRONTEND_BACKEND_RESOLU.md  CONFIGURATION_FRONTEND_BACKEND_SIMPLE.md  CONFIGURATION_FRONTEND_DISTANT.md  CORRECTIONS_ERREURS_404_403_FINAL.md  CORRECTION_CLASSIFICATION_EXERCICES.md  CORRECTION_DETECTION_DEBAT_FINAL.md  CORRECTION_DIAGNOSTIC_ARCHITECTURE_ELOQUENCE.md  CORRECTION_FALLBACK_THOMAS_FINAL.md  CORRECTION_FINALE_VALIDEE.md  CORRECTION_ROUTAGE_MULTI_AGENT_FINALE.md  CORRECTION_STUDIO_DEBATE_TV_FINAL.md  CORRECTION_THOMAS_FINALE.md  DASHBOARD_ELOQUENCE_GUIDE_COMPLET.md  DEPLOYMENT_README.md  DIAGNOSTIC_COMPLET_AUDIO_FLUTTER_FINAL.md  DIAGNOSTIC_CONVERSATION_STREAMING_LIVEKIT.md  DIAGNOSTIC_FINAL_CORRECTION_AUDIO_FLUTTER_ELOQUENCE.md  DIAGNOSTIC_FINAL_SCALEWAY.md  DIAGNOSTIC_GIT.bat  DIAGNOSTIC_GIT.ps1  DIAGNOSTIC_PROBLEME_AUDIO_IA_MUETTE.md  DOCUMENTATION_ENDPOINTS_ELOQUENCE.md  ELOQUENCE_CONCEPT_ET_ARCHITECTURE.md  (+156 more)
services/livekit-agent/: 1.2.3  CONFIRMATION_FINALE_PROMPTS_COMPLETS.py  CORRECTIONS_ERREURS_MULTI_AGENTS.md  CORRECTION_4_VALIDATION.md  Dockerfile  Dockerfile.multi  Dockerfile.multiagent  Dockerfile.unified  INTEGRATION_GUIDE_REVOLUTIONNAIRE.md  TTS_STATUS_REPORT.md  (+67 more)
(+795 files in other folders)
