[tool.poetry]
name = "eloquence-multiagent"
version = "1.0.0"
description = "Système multi-agents LiveKit pour Eloquence"
authors = ["Eloquence Team <team@eloquence.ai>"]

[tool.poetry.dependencies]
python = "^3.11"
livekit = "^0.15.2"
livekit-agents = "^0.8.12"
openai = "^1.35.0"
mistralai = "^0.4.0"
redis = "^5.0.0"
asyncio = "*"
aiohttp = "^3.8.0"
websockets = "^11.0.0"
numpy = "^1.24.0"
pydub = "^0.25.0"
python-dotenv = "^1.0.0"
prometheus-client = "^0.17.0"
psutil = "^5.9.0"
typing-extensions = "^4.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
black = "^23.7.0"
flake8 = "^6.0.0"
mypy = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
multiagent = "main:main"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true